# AI-bookshelf

./: .replit  app.py  data.csv  demo_mode.py  index.html  pyproject.toml  replit.md  tools.py
attached_assets/: Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-name-viewport-content-1755428554812_1755428554815.txt  Pasted-import-os-import-csv-from-flask-import-Flask-send-file-jsonify-request-from-dotenv-import-load-do-1755428627517_1755428627518.txt
