[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.64.0",
    "beautifulsoup4>=4.13.4",
    "duckduckgo-search>=8.1.1",
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "google-genai>=1.30.0",
    "gunicorn>=23.0.0",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.18",
    "langchain-core>=0.3.74",
    "langchain-google-genai>=2.1.9",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "wikipedia>=1.4.0",
]
